# pwfr

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/pwfr/: lib.rs
src/pwfr/core/: mod.rs
src/pwfr/core/ebuild/: efile.pest  efile.rs  executor.rs  fuzzy.rs  mod.rs  path.rs  pattern.rs  utils.rs  variable.rs
src/pwfr/core/ebuild/builtins/: mod.rs
src/pwfr/core/ebuild/eapi/: eapi0.rs  mod.rs
src/pwfr/core/ebuild/evars/: mod.rs
src/pwfr/core/package/: category.rs  mod.rs  package.rs  slot.rs  use_flags.rs  version.rs
